--- a/index.html
+++ b/index.html
@@ -292,6 +292,9 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
+  <script data-cfasync="false" type="text/javascript">window.civchat = {apiKey: "8x5ykk",};</script><script data-cfasync="false" type="text/javascript" src="https://pksam.user.com/widget.js"></script>
+
+
 </body>
 
 </html>
